--- a/template.Rmd
+++ b/template.Rmd
@@ -9,9 +9,10 @@ output: pdf_document
 library(tidyverse)
 ```
 
+## Get data
 
-## Get data 
 Note: make sure data is in its own folder named "data"
+
 ```{r}
 l = list()
 for (season in c(2007:2022)) {
@@ -23,8 +24,8 @@ df = bind_rows(l)
 rm(l)
 ```
 
-
 Data cleaning
+
 ```{r}
 # Make sure 0 distance shots are from restricted area
 df = df[df$SHOT_ZONE_BASIC == 'Restricted Area' | df$SHOT_DISTANCE > 0, ]
@@ -38,4 +39,55 @@ df = df[!(df$SHOT_TYPE == '3PT Field Goal' &
 df = df[!(df$SHOT_TYPE == '2PT Field Goal' & 
             df$SHOT_ZONE_BASIC %in% c('Left Corner 3', 'Right Corner 3', 
                                      'Above the Break 3', 'Backcourt')), ]
+
+# Filter out no shots
+df = df[df$ACTION_TYPE != 'No Shot', ]
 ```
+
+
+
+Restructure Action Types
+```{r}
+df$ACTION_TYPE = df$ACTION_TYPE %>% tolower()
+
+# simplification
+df$ACTION_TYPE = gsub('tip dunk', 'putback dunk', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('hook bank', 'hook', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('jump bank shot', 'jump shot', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('bank shot', 'jump shot', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('tip layup', 'tip', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('jump hook', 'hook', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('pull-up', 'driving', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('pullup', 'driving', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('running driving', 'driving', df$ACTION_TYPE)
+
+# definitely remove
+df$ACTION_TYPE = gsub('bank ', '', df$ACTION_TYPE)
+df$ACTION_TYPE = gsub('slam ', '', df$ACTION_TYPE)
+
+# maybe remove
+df$ACTION_TYPE = gsub('finger roll ', '', df$ACTION_TYPE)
+# df$ACTION_TYPE = gsub('floating ', '', df$ACTION_TYPE)
+
+df$ACTION_TYPE %>% unique()
+
+df$SHOT_TECHNIQUE = word(df$ACTION_TYPE, -2, -1)
+df[df$SHOT_TECHNIQUE == 'layup shot', 'SHOT_TECHNIQUE'] = 'layup'
+df[df$SHOT_TECHNIQUE == 'dunk shot', 'SHOT_TECHNIQUE'] = 'dunk'
+df[df$SHOT_TECHNIQUE == 'fadeaway shot', 'SHOT_TECHNIQUE'] = 'jump shot'
+
+df$SHOT_TECHNIQUE %>% unique()
+
+df$running_shot = if_else(grepl('running', df$ACTION_TYPE), 1, 0)
+df$turnaround_shot = if_else(grepl('turnaround', df$ACTION_TYPE), 1, 0)
+df$driving_shot = if_else(grepl('driving', df$ACTION_TYPE), 1, 0)
+df$putback_shot = if_else(grepl('putback', df$ACTION_TYPE), 1, 0)
+df$stepback_shot = if_else(grepl('step', df$ACTION_TYPE), 1, 0)
+df$cutting_shot = if_else(grepl('cutting', df$ACTION_TYPE), 1, 0)
+df$reverse_shot = if_else(grepl('reverse', df$ACTION_TYPE), 1, 0)
+df$fadeaway_shot = if_else(grepl('fadeaway', df$ACTION_TYPE), 1, 0)
+df$alleyoop_shot = if_else(grepl('alley', df$ACTION_TYPE), 1, 0)
+df$floater_shot = if_else(grepl('floating', df$ACTION_TYPE), 1, 0)
+```
+
+
